<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_contact_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_normal"
            android:contentDescription="@string/contact_avatar"
            android:src="@drawable/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_contact_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_normal"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@id/iv_contact_avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="User Namenamenamenamenaan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/iv_contact_avatar"
            app:layout_constraintTop_toBottomOf="@id/iv_contact_avatar">

            <TextView
                android:id="@+id/tv_text_phones"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/space_normal"
                android:background="@color/gray"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/space_normal"
                android:paddingEnd="@dimen/space_normal"
                android:text="@string/phones"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_no_phones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_marginTop="5dp"
                android:text="@string/no_phones_yet"
                android:textSize="18sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_contact_phones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal" />

            <TextView
                android:id="@+id/tv_text_emails"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/space_normal"
                android:background="@color/gray"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/space_normal"
                android:paddingEnd="@dimen/space_normal"
                android:text="@string/emails"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_contact_emails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal" />

            <TextView
                android:id="@+id/tv_no_emails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_marginTop="5dp"
                android:text="@string/no_emails_yet"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
